--- a/package.json
+++ b/package.json
@@ -10,25 +10,39 @@
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^4.3.7",
+    "@hookform/resolvers": "^5.2.2",
     "@safe-global/safe-apps-provider": "^0.18.6",
     "@safe-global/safe-apps-sdk": "^9.1.0",
     "@tanstack/react-query": "^5.90.12",
     "@walletconnect/ethereum-provider": "^2.23.0",
+    "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "connectkit": "^1.9.1",
+    "lucide-react": "^0.560.0",
     "next": "16.0.7",
+    "next-themes": "^0.4.6",
+    "qs": "^6.14.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.68.0",
+    "sonner": "^2.0.7",
+    "swr": "^2.3.7",
+    "tailwind-merge": "^3.4.0",
     "viem": "^2.41.2",
-    "wagmi": "^3.1.0"
+    "wagmi": "^3.1.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/qs": "^6.14.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
