--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^5.90.12",
     "@walletconnect/ethereum-provider": "^2.23.0",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "connectkit": "^1.9.1",
@@ -31,6 +32,7 @@
     "next-themes": "^0.4.6",
     "qs": "^6.14.0",
     "react": "19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
     "sonner": "^2.0.7",
