--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "connectkit": "^1.9.1",
     "lucide-react": "^0.560.0",
     "next": "16.0.7",
+    "next-intl": "^4.6.0",
     "next-themes": "^0.4.6",
     "qs": "^6.14.0",
     "react": "19.2.0",
