--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "connectkit": "^1.9.1",
+    "dayjs": "^1.11.19",
     "lucide-react": "^0.560.0",
     "next": "16.0.7",
     "next-intl": "^4.6.0",
