--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@coinbase/wallet-sdk": "^4.3.7",
+    "@base-org/account": "^2.5.1",
     "@hookform/resolvers": "^5.2.2",
+    "@metamask/sdk": "^0.34.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -18,6 +19,7 @@
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@safe-global/safe-apps-provider": "^0.18.6",
     "@safe-global/safe-apps-sdk": "^9.1.0",
     "@tanstack/react-query": "^5.90.12",
@@ -32,6 +34,7 @@
     "next": "15.1.3",
     "next-intl": "^4.6.0",
     "next-themes": "^0.4.6",
+    "porto": "^0.2.37",
     "qs": "^6.14.0",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
