--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@base-org/account": "^2.5.1",
     "@hookform/resolvers": "^5.2.2",
     "@metamask/sdk": "^0.34.0",
+    "@next/third-parties": "^16.1.1",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
